opam-version: "2.0"
maintainer: "david@o1labs.org"
authors: "David Wong"
homepage: "https://github.com/mimoo/conf-rust-1-53"
bug-reports: "https://github.com/mimoo/conf-rust-1-53/issues"
license: "MIT"
build: [
  ["cargo" "--version"]
  ["cargo" "+1.53.0" "build"]
]
depexts: [
  ["cargo"] {os-distribution = "centos" & os-version >= "8"}
  ["cargo"] {os-distribution = "ol" & os-version >= "8"}
  ["cargo"] {os-distribution = "fedora"}
  ["cargo"] {os-family = "suse"}
  ["cargo"] {os-family = "debian"}
  ["cargo"] {os-family = "ubuntu"}
  ["cargo"] {os-distribution = "nixos"}
  ["cargo"] {os-family = "alpine"}
  ["rust"] {os-family = "arch"}
  ["rust"] {os = "macos" & os-distribution = "homebrew"}
]
x-ci-accept-failures: [
  "centos-7" # does not have cargo by default
  "oraclelinux-7" # does not have cargo by default
]
synopsis: "Virtual package relying on cargo (rust build system)"
description:
  "This package can only install if cargo (edition=2018) is installed on the system with rust 1.53.0-x86_64-apple-darwin."
flags: conf
