opam-version: "2.0"
maintainer: "david@o1labs.org"
authors: "David Wong"
homepage: "https://github.com/mimoo/conf-rust-1-53"
bug-reports: "https://github.com/mimoo/conf-rust-1-53/issues"
license: "MIT"
build: [
  ["cargo" "--version"]
  ["cargo" "+1.53.0" "build"]
]
depends: [
  "conf-rust-2018"
]
synopsis: "Virtual package relying on cargo (rust build system)"
description:
  "This package can only install if cargo (edition=2018) is installed on the system with rust 1.53.0-x86_64-apple-darwin."
flags: conf
